# langchain-v1

./: .codegraph  .gitignore  PLAN.md  README.md  biome.json  index.html  main.py  package.json  pnpm-lock.yaml  pyproject.toml  tsconfig.json  tsconfig.node.json
.claude/docs/260704-2244-Tauri 기반 콘텐츠 기획수정발행 RAG 데스크톱 앱 워크플로우/: Tauri 기반 콘텐츠 기획·수정·발행 RAG 데스크톱 앱 워크플로우.html  Tauri 기반 콘텐츠 기획수정발행 RAG 데스크톱 앱 워크플로우.md
.claude/docs/260704-2255-Tauri 기반 콘텐츠 기획수정발행 RAG 데스크톱 앱 PRD/: Tauri 기반 콘텐츠 기획수정발행 RAG 데스크톱 앱 PRD.md
agent_server/app/: database.py  graph.py  llm_cli_adapter.py  main.py  paths.py  quality.py  repository.py  retriever.py  schemas.py
agent_server/tests/: test_backend.py
data/sources/content/: blog-draft.md
data/sources/guidelines/: publishing-checklist.txt  tone-guide.csv
data/sources/references/: product-reference.html
docs/: chroma.md  langchain.md  langgraph.md  rag.md  vector-db.md
scripts/: scan_sources.py
src/: App.tsx  api.test.ts  api.ts  components.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
